--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ env:
     - GIT_AUTHOR_EMAIL='mrkn@mrkn.jp'
 
 before_script:
-  - '[ "$TRAVIS_BRANCH" == "master" ] && [ "$GH_TOKEN" ] && rake setup >/dev/null 2>&1'
+  - '[ "$TRAVIS_BRANCH" == "master" ] && [ "$GH_TOKEN" ] && rake setup'
 
 script: rake build
 
 after_success:
-  - '[ "$TRAVIS_BRANCH" == "master" ] && [ $GH_TOKEN ] && rake publish >/dev/null 2>&1'
+  - '[ "$TRAVIS_BRANCH" == "master" ] && [ $GH_TOKEN ] && rake publish'
